--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
         <script src=“main.js”></script>
         <script src=“http://chancejs.com/chance.min.js”></script>
     </head>
-    <body>
+    <body onload="fetchIssues()">
         <div class=“container”>
             <h1>Issue Tracker</h1>
             <div class=“footer”>
                 <p>Taller en Clase de Proyecto Integrador I - 2022</p>
+            </div>
+            <div class="row">
+
+
+                <div class="col-lg-12">
+
+
+                    <div id="issuesList">
+
+
+                    </div>
+                </div>
             </div>
         </div>
     </body>
